<resources>
    <string name="app_name">new_interface</string>
    <string name="change_lang">Change Language</string>
    <string name="update">Update Profile</string>
    <string name="Cp">Change Password</string>
    <string name="dp">Default Language</string>
    <string name="LP">Loyalty Programs</string>
    <string name="ps">Privacy and Security</string>
    <string name="account">Account</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="email_notifications">Email Notifications</string>
    <string name="notification">Notification</string>
    <string name="connect_to_calendar">Connect to Calendar</string>
    <string name="terms_and_policies">Terms and Policies</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>