<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_5"
            android:background="@color/white"
            android:paddingStart="@dimen/dp_5"
            android:text="@string/account"
            android:textColor="#40e0d0"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            style="@style/margin"/>

        <Button

            android:id="@+id/update_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
           android:text="@string/update"
            android:textAlignment="textStart"
            style="@style/button_main_frag"
            android:paddingStart="@dimen/dp_7"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/pswd_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/Cp"
            android:textAlignment="textStart"
            style="@style/button_main_frag"
            android:paddingStart="@dimen/dp_7"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/lang_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/dp"
            android:textAlignment="textStart"
            style="@style/button_main_frag"
            android:paddingStart="@dimen/dp_7"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/loyaltyPrograms_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            style="@style/button_main_frag"
            android:paddingStart="@dimen/dp_7"
            android:text="@string/LP"
            android:textAlignment="textStart"
            />

        <Button
            android:id="@+id/security_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="@dimen/dp_7"
            android:shadowColor="@color/white"
            android:text="@string/ps"
            android:textAlignment="textStart"
            style="@style/button_main_frag" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingStart="@dimen/dp_5"
            android:paddingTop="@dimen/dp_40"
            android:paddingBottom="@dimen/dp_5"
            android:text="@string/notification"
            android:textColor="#40e0d0"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/in_25"
            android:background="@color/white"
            android:checked="true"
            android:paddingStart="@dimen/dp_7"
            android:text="@string/email_notifications"
            android:textSize="@dimen/sp_14" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="0.25in"
            android:background="@color/white"
            android:checked="true"
            android:paddingStart="@dimen/dp_7"
            android:text="@string/push_notifications"
            android:textSize="@dimen/sp_14" />

        <Button
            android:id="@+id/calendar_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@drawable/border_1"
            android:outlineAmbientShadowColor="@color/colorAccent"
            android:shadowColor="@color/white"
            android:text="@string/connect_to_calendar"
            android:textAllCaps="false"
            android:textColor="#40e0d0"
            android:textSize="@dimen/sp_20" />

        <Button
            android:id="@+id/help_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/dp_20"
            style="@style/bottom_btns"
            android:paddingStart="@dimen/dp_7"
            android:text="@string/help"
            android:textAlignment="textStart"
            android:drawableStart="@drawable/help"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/tndp_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            style="@style/bottom_btns"
            android:drawableStart="@drawable/tp"
            android:paddingStart="@dimen/dp_7"
            android:text="@string/terms_and_policies"
            android:textAlignment="textStart"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            style="@style/bottom_btns"
            android:drawableStart="@drawable/log"
            android:text="@string/logout"
            android:textAlignment="textStart"
            tools:ignore="RtlCompat"
            android:paddingStart="@dimen/dp_7" />

    </LinearLayout>
</ScrollView>